# docstring_jformat

./: LICENSE  README.md  pyproject.toml
docstring_jformat/: main.py
docstring_jformat/api/: format_docstring.py  format_text.py
