[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docstring_jformat"
version = "0.1.0"
description = "Find and reformat docstrings and single line comments in a python script."
authors = [
    { name = "Davide Colì", email = "davide1936@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.6"

[project.scripts]
docjformat = "docstring_jformat.main:main"
